[gd_scene load_steps=7 format=3 uid="uid://cr243x0ei4463"]

[ext_resource type="PackedScene" uid="uid://bdtn1xjb5eyow" path="res://Assets/Models/MI SMART TV.fbx" id="1_4jumj"]
[ext_resource type="Script" uid="uid://cf68t75hopml8" path="res://scripts/tv.gd" id="1_m8c1k"]
[ext_resource type="VideoStream" uid="uid://csyr8ny553yiv" path="res://Assets/Models/Old-analog-TV-noise_-bad-signal-Retroqrad-Retroqrad-Azerbaycan-_720p_-h264_.ogv" id="3_hi5dx"]

[sub_resource type="BoxShape3D" id="BoxShape3D_m8c1k"]
size = Vector3(1.83236, 0.912964, 0.271484)

[sub_resource type="BoxShape3D" id="BoxShape3D_hi5dx"]
size = Vector3(3, 2.35205, 3)

[sub_resource type="PlaneMesh" id="PlaneMesh_hi5dx"]

[node name="TV" type="Node3D"]
script = ExtResource("1_m8c1k")

[node name="MI SMART TV" parent="." instance=ExtResource("1_4jumj")]
transform = Transform3D(0.0173128, 0, 0.99985, 0, 1, 0, -0.99985, 0, 0.0173128, 0.432682, 0, -0.0259172)

[node name="StaticBody3D" type="StaticBody3D" parent="MI SMART TV"]
transform = Transform3D(0.0173128, 0, -0.99985, 0, 1, 0, 0.99985, 0, 0.0173128, -0.0334042, 0, -0.432168)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MI SMART TV/StaticBody3D"]
transform = Transform3D(0.0173128, 0, 0.99985, 0, 1, 0, -0.99985, 0, 0.0173128, 0.0685508, 0.806887, -0.0364)
shape = SubResource("BoxShape3D_m8c1k")

[node name="DetectionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.176025, 0)
shape = SubResource("BoxShape3D_hi5dx")

[node name="InteractionLabel" type="Label3D" parent="."]

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="SubViewport"]
offset_right = 1920.0
offset_bottom = 1080.0
stream = ExtResource("3_hi5dx")
paused = true
loop = true

[node name="TVScreen" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.00194275, 0.993132, -0.0182237, -0.56665, -0.00340074, 0.000286704, 0.000129138, 0.018396, 0.983884, 0.141827, 0.745031, -0.0258917)
visible = false
mesh = SubResource("PlaneMesh_hi5dx")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
